--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Resume</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -106,9 +106,9 @@
                         </p>
                     </div> -->
                     <!-- Divider-->
-                    <hr class="my-4" />
+                    <!-- <hr class="my-4" /> -->
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+                    <!-- <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div> -->
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
+                        <!-- <ul class="list-inline text-center">
                             <li class="list-inline-item">
                                 <a href="#!">
                                     <span class="fa-stack fa-lg">
@@ -142,7 +142,7 @@
                                     </span>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> -->
                         <div class="small text-center text-muted fst-italic">Copyright &copy; My Website 2023</div>
                     </div>
                 </div>
